Fix instance data compare